Finished all html, css and js code

--- a/html/about.html
+++ b/html/about.html
@@ -11,24 +11,26 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="../img/tasks.png">
-          <p>Welcome back <span style="color:red">Alinur Ali.</span></p>
-          <h3><span style="color:red">Add a task</span></h3>
-          <input id="inputField" type="text"><button id="addToDo">+</button>
+          <img src="../img/dev.png">
+          <h3>Developer</h3>
+          <p>Name : Alinur Ali</p>
+          <p>Email : alinurali254@gmail.com</p>
+          <p>Github : </p>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <h3>My tasks</h3>
-            <div class="to-dos" id="toDoContainer">
-            </div>
-            <script src="../js/main.js"></script>
+          <img src="../img/proj.png">
+          <h3>Project</h3>
+          <h4>About:</h4>
+          <p>This is a javascript to do list web app with html and css</p>
+          <p>With also bootstrap integration</p>
         </div>
       </div>
     </div>
     <div class="foot">
-      <a href="about.html">About</a>
+      <a href="index.html">Home</a>
     </div>
   </div>
 </body>
