--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
     <link rel="stylesheet" href="../css/style.css">
     <title>Matask</title>
+    <style>
+       body{
+         background-image : url("../img/back2.jpg");
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-position: center;
+       }
+    </style>
 </head>
 <body>
   <div class="shell">
@@ -15,6 +24,8 @@
           <p>Welcome back <span style="color:red">Alinur Ali.</span></p>
           <h3><span style="color:red">Add a task</span></h3>
           <input id="inputField" type="text"><button id="addToDo">+</button>
+          <p>Click to mark completed task</p>
+          <p>Double click to remove task</p>
         </div>
       </div>
 
